@@ -19,4 +19,4 @@ import(graphics)
 import(lintools)
 import(validate)
 importFrom(stats,density)
-useDynLib(rspa)
+useDynLib(rspa, .registration=TRUE)
